# internal/lib/api/response/response.go
@@ -1,7 +1,21 @@
 package response
 
+import "errors"
+
+var (
+	ErrInternal          = errors.New("internal server error")
+	ErrInvalidAuthHeader = errors.New("invalid auth header")
+	ErrInvalidToken      = errors.New("invalid token")
+)
+
 type ErrResponse struct {
 	Errors map[string]string `json:"errors"`
+}
+
+func ErrorInternal() ErrResponse {
+	return ErrResponse{
+		Errors: map[string]string{"message": ErrInternal.Error()},
+	}
 }
 
 func Error(msg string) ErrResponse {
